[gd_scene load_steps=3 format=3 uid="uid://b6ce6il4fmift"]

[ext_resource type="Script" path="res://dialogue_node.gd" id="1_5deuc"]
[ext_resource type="Texture2D" uid="uid://ctyyd5pfkunvi" path="res://Images/Placeholder.png" id="1_bkowf"]

[node name="DialogueNode" type="Control"]
layout_mode = 3
anchor_right = 0.345
anchor_bottom = 0.548
offset_right = -0.440033
offset_bottom = -0.104034
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5deuc")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
offset_right = 392.0
offset_bottom = 355.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 392.0
offset_bottom = 356.0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
color = Color(0.62074, 0.384402, 0.249828, 1)

[node name="TextureButton" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("1_bkowf")
ignore_texture_size = true
stretch_mode = 5

[node name="CharacterNameEdit" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
placeholder_text = "Enter Character Name"

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Dialogue:"

[node name="AddDialogue" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Add Dialogue Option+"

[node name="TextEdit2" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Enter Dialogue"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(800, 600)
ok_button_text = "Open"
file_mode = 0
access = 2

[connection signal="pressed" from="VBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="VBoxContainer/AddDialogue" to="." method="_on_add_dialogue_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
